# flow-lang

./: Cargo.toml  PRODUCTION_ROADMAP.md  README.md  RELEASE_NOTES.md  basic_test.flow  benchmark.flow  benchmark.py  benchmark_optimized.flow  bigint_arithmetic_test.flow  lambda_test.flow  minimal_test.flow  phase1_test.flow  print_test.flow  simple_benchmark.py  simple_test.flow  test1.txt  test2.txt  test5.txt  test6.txt  test_bigint.flow  test_else_if.flow  test_http_response.flow  test_just_object.flow  test_syntax_highlighting.flow  test_to_string_property.flow
editor-support/: vscode-settings-example.json
examples/: comprehensive_test.flow  debug_city_input.flow  debug_direct_call.flow  debug_import.flow  debug_import2.flow  debug_import_modules.flow  debug_import_simple.flow  direct.txt  factorial_bigint_test.flow  fibonacci.flow  final_import_test.flow  func_alias.txt  hello.flow  import_test.flow  import_test_minimal.flow  interactive_weather_app.flow  simple_benchmark.flow  simple_bigint_test.flow  simple_import_test.flow  simple_lambda_test.flow  specific.txt  specific_import_test.flow  stdlib_test.flow  test1.txt  test2.txt  test3.txt  test_array_comprehensive.flow  test_array_methods.flow  test_array_with_lambdas.flow  test_basic.flow  test_foreach_simple.flow  test_function.flow  test_function_calls.flow  test_http_module.flow  test_http_section.flow  test_http_simple.flow  test_http_simple_module.flow  test_inline_lambda.flow  test_lambda_simple.flow  test_line_by_line.flow  (+14 more)
scripts/: build-release.sh
src/: ast.rs  bigint.rs  bytecode.rs  collections.rs  (+13 more)
(+53 files in other folders)
